# flask-template

./: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE.md  Makefile  README.md  compose.yml  pyproject.toml
