[tool.poetry]
name = "flask-template"
version = "0.0.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "^4.0.1"
bandit = "^1.8.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
